# NaiveCCompiler

./: .gitignore  .tags  .tags_sorted_by_file  .travis.yml  CMakeLists.txt  README.md  zhulei.txt
SemanticAnalyzer/: 2.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.h  main.cpp
SemanticAnalyzer/Semantic/Semantic.xcodeproj/: project.pbxproj
SemanticAnalyzer/Semantic/Semantic.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
doc/: 祝磊_编译原理课程设计实验报告.doc  编译原理课程设计实验报告-胡文博.doc
doc/cris/: 2017编译原理课程设计实验说明和要求.ppt  2017编译课设程序及报告的要求.doc  参考模板-编译原理课程设计实验报告.doc  第8章 语法制导翻译和中间代码生成-2016.ppt  编译原理课程设计实验报告-胡文博.doc
doc/cris/img/: 词法DFA.docx  词法DFA.eddx  词法DFA.htm
report/: ~$_编译原理课程设计实验报告.doc  祝磊_编译原理课程设计实验报告.doc
src/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  a.out  editortest.nc  lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp  simpleVitualMachine.cpp  simpleVitualMachine.h  virtualMachine.c  virtualMachine.cpp  virtualMachine.h  virtualMachine.raw
src/NCC/NCC.xcodeproj/: project.pbxproj
src/NCC/NCC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/compiler/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp
src/compiler/lexicalAnalyzer-Leif/: lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp
src/compiler/lexicalAnalyzer-Leif/release & test file/: correct.nc  lexer  wrong.nc
src/compiler/ncc/ncc.xcodeproj/: project.pbxproj
src/editor/: Editor.py  \home\cris\gitRep\NaiveCCompiler\src\editor\test.nc  a.s  b.s  commands.py  naiveCkeywords.txt  nvm  output.txt  test.nc  untitled.cpp  ww.nc
src/editor/config/: naiveAssemblykeywords.txt  naiveCkeywords.txt
src/virtualMachine/: main.cpp  simpleVitualMachine.cpp  simpleVitualMachine.h
test/: 1.s  1.txt  2.nc  5.txt  NCC  a.out  a.s  assembly.s  b.s  bbbb.s  bbbbbbb.s  c.s  e1  e1.c  memo.txt  ncc  test.c  test.nc  testVirtualMachine.s  x.s  xc.c
(+9 files in other folders)
